--- a/sc/text-loading/index.html
+++ b/sc/text-loading/index.html
@@ -6,10 +6,6 @@
         <script src="../sc.js"></script>
     </head>
     <body>
-        <div>
-            <p>today is good day</p>
-            <p>today is good day</p>
-            <button class="sc-button-color2" value="hello world">hello world body</button>
-        </div>
+        <div class="sc-loading">loading</div>
     </body>
 </html>
