--- a/sc/text-blurry/index.html
+++ b/sc/text-blurry/index.html
@@ -9,7 +9,10 @@
         <div>
             <p>today is good day</p>
             <p>today is good day</p>
-            <button class="sc-button-color2" value="hello world">hello world body</button>
+        </div>
+        <div class="sc-text-blurry">
+            <p>today is good day</p>
+            <p>today is good day</p>
         </div>
     </body>
 </html>
