--- a/sc/text-blurry/index.html
+++ b/sc/text-blurry/index.html
@@ -7,12 +7,12 @@
     </head>
     <body>
         <div>
-            <p>today is good day</p>
-            <p>today is good day</p>
+            <p>today is good day 1</p>
+            <p>today is good day 2</p>
         </div>
         <div class="sc-text-blurry">
-            <p>today is good day</p>
-            <p>today is good day</p>
+            <p>today is good day 3</p>
+            <p>today is good day 4</p>
         </div>
     </body>
 </html>
