--- a/sc/index.html
+++ b/sc/index.html
@@ -2,13 +2,10 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <script src="_dist/jquery/jquery.min.js"></script>
-        <link rel="stylesheet" href="_dist/highlight.js/styles/ir_black.css">
+        <link rel="stylesheet" href="main.css" />
+        <script src="main.js"></script>
         <!-- ir_black.css -->
         <!-- github.css -->
-        <script src="_dist/highlight.js/highlight.pack.js"></script>
-        <script src="_dist/main.js"></script>
-        <script src="_dist/clipboard/clipboard.min.js"></script>
         <link rel="stylesheet" href="sc.css" />
         <script src="sc.js"></script>
         <style>
