upgrade to only demo

--- a/demo.htm
+++ b/demo.htm
@@ -2,29 +2,14 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <script src="http://sb.tw:35729/livereload.js"></script>
         <link rel="stylesheet" href="main.css" />
         <script src="main.js"></script>
-        <!-- ir_black.css -->
-        <!-- github.css -->
-        <link rel="stylesheet" href="sc.css" />
-        <script src="sc.js"></script>
+        <script src="dist/app.js"></script>
     </head>
     <body>
         <div style="width:1000px">
 
-
-<!-- ------------------------------------------------------------ -->
-<h2>漸層 Button</h2>
-<div>
-    <button class="sc-button-color2" value="hello world">hello world</button>
-</div>
-<pre class="js-show"><code class="html">
-    <button class="sc-button-color2" value="hello world">hello world</button>
-</code></pre>
-<h4>
-    <div>- 讓 button 有漸層的效果</div>
-    <div>- button hover 也有視覺效果</div>
-</h4>
 
 <!-- ------------------------------------------------------------ -->
 <h2>圖片框</h2>
